Kubernetes/authentication-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: default
  labels:
    app: authentication-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      - name: authentication-service
        image: gcr.io/textchat-0/authentication-service:v13
        ports:
        - containerPort: 3000
