Kubernetes/friendship-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friendship-service
  namespace: default
  labels:
    app: friendship-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: friendship-service
  template:
    metadata:
      labels:
        app: friendship-service
    spec:
      containers:
      - name: friendship-service
        image: gcr.io/textchat-0/friendship-service:v9
        ports:
        - containerPort: 3000
