Kubernetes/messaging-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-service
  namespace: default
  labels:
    app: messaging-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-service
  template:
    metadata:
      labels:
        app: messaging-service
    spec:
      containers:
      - name: messaging-service
        image: gcr.io/textchat-0/messaging-service:v8
        ports:
        - containerPort: 3000
