Kubernetes/authentication-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: default
spec:
  selector:
    app: authentication-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
