Kubernetes/friendship-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: friendship-service
  namespace: default
spec:
  selector:
    app: friendship-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
