Kubernetes/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: default
spec:
  selector:
    app: jaeger
  ports:
  - protocol: TCP
    port: 16686
    targetPort: 16686
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: default
spec:
  selector:
    app: jaeger
  ports:
  - name: p1
    protocol: TCP
    port: 14268
    targetPort: 14268
  - name: p2
    protocol: TCP
    port: 14250
    targetPort: 14250
  type: ClusterIP
