Kubernetes/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: default
  annotations:
    networking.gke.io/backend-config: '{"default":"app-backendconfig"}'
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
