Kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  selector:
    app: rabbitmq
  ports:
  - name: mainport
    port: 5672
    targetPort: 5672
  - name: uiport
    port: 15672
    targetPort: 15672
  type: ClusterIP
