Kubernetes/resource-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-provider
  namespace: default
spec:
  selector:
    app: resource-provider
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
